*************
version 0.9.8
*************

* send a mode when opening files read-only in case broken servers will
  erroneously set the remote file's mode to 0 and then the file will not be readable
    

*************
version 0.9.7
*************

* an exception will be thrown if a key file is set and either the public or
  private key is not available or readable; previously such errors would
  cause hard-to-debug connection problems
* fixed another deadlock in the SFTPClient::disconnect() method (oops)
* minor doc updates


*************
version 0.9.6
*************

major documentation updates; now using doxygen
fixed a deadlock in the SFTPClient::disconnect() method
requires qore 0.8.1+ to build and run


*************
version 0.9.5
*************

Initial release of the ssh2 module
Requires qore 0.8.0+ to build and run
see README and docs for more information