@@ -2,8 +2,9 @@
 version 0.9.8
 *************
 
-* send a mode when opening files read-only in case broken servers will
-  erroneously set the remote file's mode to 0 and then the file will not be readable
+* send the file mode when opening files read-only in case broken servers will
+  erroneously set the remote file's mode to 0 and then the file will not be
+  readable
     
 
 *************
